--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -67,19 +67,17 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   display: block;
 }
 
-/* line 17, ../sass/screen.scss */
+/* SASS VARIABLES */
+/* line 24, ../sass/screen.scss */
 * {
   box-sizing: border-box;
 }
 
-/* line 20, ../sass/screen.scss */
+/* line 27, ../sass/screen.scss */
 body {
-  background-color: #FFFFFF;
+  font-family: sans-serif;
   font-size: 1em;
-}
-
-/* line 24, ../sass/screen.scss */
-#app {
+  background-color: #FFFFFF;
   max-width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -88,23 +86,43 @@ body {
   box-sizing: border-box;
 }
 /* line 12, ../../../../../Ruby22-x64/lib/ruby/gems/2.2.0/gems/susy-2.2.6/sass/susy/output/support/_clearfix.scss */
-#app:after {
+body:after {
   content: " ";
   display: block;
   clear: both;
 }
 
-/* line 28, ../sass/screen.scss */
+/* line 35, ../sass/screen.scss */
+#app {
+  position: relative;
+  top: 80px;
+  height: 1000px;
+  background-color: orange;
+}
+
+/* line 42, ../sass/screen.scss */
+#header {
+  height: 80px;
+  background-color: gray;
+  display: block;
+  position: fixed;
+  width: 100%;
+  padding-bottom: 80px;
+  z-index: 999;
+}
+
+/* line 54, ../sass/screen.scss */
 #login-form {
   max-width: 400px;
-  margin: 20px auto;
-  padding: 30px;
+  margin: 10px auto;
+  padding: 10px 4%;
   background-color: #00796B;
   color: whitesmoke;
   letter-spacing: 0.25em;
   text-transform: uppercase;
+  font-family: inherit;
 }
-/* line 37, ../sass/screen.scss */
+/* line 64, ../sass/screen.scss */
 #login-form #login-name, #login-form #login-password, #login-form #login-submit {
   height: 60px;
   width: 100%;
@@ -116,4 +134,54 @@ body {
   color: inherit;
   letter-spacing: inherit;
   text-transform: inherit;
+}
+
+/* line 79, ../sass/screen.scss */
+.addtaskview {
+  margin: 0 auto;
+  padding: 10px 4%;
+  background-color: #00796B;
+  color: whitesmoke;
+}
+/* line 86, ../sass/screen.scss */
+.addtaskview #addtask, .addtaskview #descriptionInput {
+  width: 100%;
+  max-width: 100%;
+  height: 30px;
+  padding: 4px;
+}
+/* line 92, ../sass/screen.scss */
+.addtaskview #descriptionInput {
+  height: 125px;
+}
+/* line 95, ../sass/screen.scss */
+.addtaskview #datepickerIcon, .addtaskview #priority, .addtaskview #tag {
+  width: 33.33333%;
+  float: left;
+  padding-left: 0.83333%;
+  padding-right: 0.83333%;
+  height: 20px;
+  margin: 0 auto;
+  text-align: center;
+}
+/* line 100, ../sass/screen.scss */
+.addtaskview #datepickerIcon i, .addtaskview #priority i, .addtaskview #tag i {
+  font-size: 1.5em;
+}
+
+/* line 107, ../sass/screen.scss */
+#ui-datepicker-div, .ui-datepicker-calendar {
+  width: 400px;
+  height: 400px;
+  background-color: whitesmoke;
+  padding: 25px;
+}
+
+/* line 114, ../sass/screen.scss */
+.toggleCalendar {
+  position: absolute;
+  top: 191.75px;
+  left: 112.35px;
+  z-index: 1;
+  display: block;
 }
